--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "main": "./src/index.js",
   "author": "ruslan.glaznyov@gmail.com",
   "description": "lava http client for cosmjs",
+  "homepage": "https://github.com/MELLIFERA-Labs/cosmolava-client#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MELLIFERA-Labs/cosmolava-client"
+  },
+  "bugs": {
+    "url": "https://github.com/MELLIFERA-Labs/cosmolava-clientissues"
+  },
   "license": "MIT",
   "scripts": {
     "test": "jest --inject-globals false",
